# Prometheus_Public

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  README.md  Trunk.toml  docker-compose.yml  index.html  input.css  restartprometheus.sh.example  start.sh  tailwind.config.js
.github/workflows/: docs.yml
assets/: robots.txt  site.webmanifest  sitemap.xml
crates/prometheus-agent/: .env.example  config.yaml  main.py  requirements.txt
crates/prometheus-agent/agents/: __init__.py  architect.py  athena.py  data_analyst.py  evaluator.py
crates/prometheus-agent/knowledge/: __init__.py  axonml_reference.md  equipment_specs.md  hvac_fault_catalog.md  training_history.md
crates/prometheus-agent/tools/: __init__.py  architecture_db.py  model_evaluator.py  sensor_analysis.py  training_trigger.py
crates/prometheus-cli/: Cargo.toml  README.md
crates/prometheus-cli/src/: api.rs  auth.rs  compression.rs  config.rs  main.rs  theme.rs
crates/prometheus-cli/src/commands/: agent.rs  datasets.rs  deploy.rs  mod.rs  models.rs  training.rs
crates/prometheus-cli/src/tui/: agent_view.rs  app.rs  convert_view.rs  dashboard.rs  datasets_view.rs  deploy_view.rs  mod.rs  models_view.rs  monitor.rs  quantize_view.rs  widgets.rs
crates/prometheus-edge/: Cargo.toml  README.md
crates/prometheus-edge/src/: config.rs  inference.rs  main.rs  sensor_poll.rs
crates/prometheus-email/: Cargo.toml  README.md
crates/prometheus-email/src/: client.rs  config.rs  error.rs  lib.rs
crates/prometheus-email/src/templates/: daily_report.rs  layout.rs  mod.rs  password_reset.rs  security_alert.rs  support.rs  verification.rs  welcome.rs
crates/prometheus-reports/: Cargo.toml  README.md
crates/prometheus-reports/src/: deployment_cert.rs  lib.rs  training_report.rs
crates/prometheus-server/: Cargo.toml  README.md
crates/prometheus-server/src/: config.rs  error.rs  main.rs  router.rs  state.rs
crates/prometheus-server/src/api/: agents.rs  billing.rs  cli_auth.rs  data_lifecycle.rs  datasets.rs  deployment.rs  email.rs  evaluation.rs  health.rs  ingestion_keys.rs  mfa.rs  mod.rs  models.rs  profile.rs  push.rs  service_accounts.rs  training.rs  users.rs
crates/prometheus-server/src/auth/: middleware.rs  mod.rs  models.rs
crates/prometheus-server/src/ws/: mod.rs
crates/prometheus-shield/: Cargo.toml  README.md
crates/prometheus-shield/src/: audit_chain.rs  config.rs  credential_vault.rs  email_guard.rs  fingerprint.rs  lib.rs  quarantine.rs  rate_governor.rs  sanitizer.rs  sql_firewall.rs  ssrf_guard.rs  threat_score.rs
crates/prometheus-training/: Cargo.toml  README.md
crates/prometheus-training/src/: cross_compile.rs  export.rs  lib.rs  metrics.rs  pipeline.rs  preprocessor.rs
crates/prometheus-training/src/architectures/: advanced_models.rs  conv_models.rs  gru_predictor.rs  lstm_autoencoder.rs  mod.rs  nlp_models.rs  resnet_model.rs  rnn_model.rs  sentinel.rs  vgg_model.rs
crates/prometheus-ui/: Cargo.toml  README.md  index.html
crates/prometheus-ui/src/: api.rs  app.rs  lib.rs  main.rs  theme.rs
crates/prometheus-ui/src/components/: badge.rs  button.rs  card.rs  chart.rs  code_block.rs  file_upload.rs  header.rs  icon.rs  ingestion_keys.rs  input.rs  layout.rs  loader.rs  metric_card.rs  mod.rs  modal.rs  sidebar.rs  table.rs  toast.rs
crates/prometheus-ui/src/icons/: mod.rs
crates/prometheus-ui/src/pages/: admin.rs  agent.rs  billing.rs  cli_verify.rs  convert.rs  dataset_detail.rs  datasets.rs  deployment.rs  evaluation.rs  home.rs  landing.rs  login.rs  mod.rs  model_detail.rs  models.rs  monitor.rs  quantize.rs  settings.rs  training.rs  training_detail.rs
crates/prometheus-ui/style/: output.css
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DATA_INGESTION.md  DEPLOYMENT.md  GRADIENT_SETUP.md
docs/integrations/: AEGISBRIDGE.md  INFLUXDB.md  MONGODB.md  POSTGRESQL.md  SPACETIMEDB.md  SQLITE.md  TIDB.md
scripts/: record_ui_navigation.js
tests/e2e/: package.json  playwright.config.ts
tests/e2e/fixtures/: auth.ts  sample_ahu_data.csv  sample_boiler_data.csv
tests/e2e/specs/: accessibility.spec.ts  agent.spec.ts  auth.spec.ts  cat-acceptance.spec.ts  dashboard.spec.ts  datasets.spec.ts  deployment.spec.ts  error-handling.spec.ts  evaluation.spec.ts  global.setup.ts  models.spec.ts  navigation.spec.ts  pipeline-workflow.spec.ts  responsive.spec.ts  settings.spec.ts  training.spec.ts  websocket.spec.ts
tests/integration/: agent_tests.rs  api_tests.rs  auth_tests.rs  cli_tests.rs  deployment_tests.rs  edge_cases_tests.rs  evaluation_tests.rs  training_tests.rs  websocket_tests.rs
tests/puppeteer/: chart_rendering.test.js  cli_auth_flow.test.js  multi_page_report.test.js  package.json  performance.test.js  report_generation.test.js  visual_regression.test.js
tools/: DEMO_SCRIPT.md  DEMO_SCRIPT_SHORT.md  record-demo.js
tools/model_converter/: convert.py  test_convert.py
vault/: config.hcl  env.sh  setup.sh  start.sh
