[package]
name = "prometheus-edge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Prometheus edge inference daemon — runs on Raspberry Pi"

[[bin]]
name = "prometheus-edge"
path = "src/main.rs"

[dependencies]
axonml-core = { workspace = true }
axonml-tensor = { workspace = true }
axonml-nn = { workspace = true }
axonml-serialize = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tiny_http = "0.12"
minreq = { version = "2.12", features = ["json-using-serde"] }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
