[package]
name = "prometheus-shield"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Adaptive zero-trust security moat for Prometheus — SQL firewall, SSRF guard, behavioral fingerprinting, tamper-evident audit chain"

[dependencies]
# SQL parsing for injection detection (AST-level analysis, not regex)
sqlparser = "0.41"

# Cryptographic hashing for audit chain + fingerprinting
sha2 = "0.10"
hex = "0.4"

# Fast synchronization (no lock poisoning)
parking_lot = "0.12"

# URL parsing for SSRF guard
url = "2"

# Credential encryption (AES-256-GCM)
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
