[package]
name = "prometheus-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Prometheus UI — Leptos WASM reactive web interface"

[[bin]]
name = "prometheus-ui"
path = "src/main.rs"

[dependencies]
leptos = { workspace = true }
leptos_router = "0.7"
leptos_meta = "0.7"

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["js"] }

web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlElement",
    "File",
    "FileList",
    "FormData",
    "DragEvent",
    "DataTransfer",
    "Event",
    "MouseEvent",
    "KeyboardEvent",
    "Window",
    "Document",
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "BinaryType",
    "Storage",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
